--- a/wiki/de/Sketcher_ConstrainEqual.html
+++ b/wiki/de/Sketcher_ConstrainEqual.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Sketcher ConstrainEqual/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Sketcher+ConstrainEqual&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Sketcher_ConstrainEqual.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Sketcher ConstrainEqual (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--low" title="Croquizador RestringirIgual (12% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--complete" title="Sketcher Contrainte d'&eacute;galit&eacute; (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
@@ -98,7 +98,7 @@
 </p><p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Hinweise">Hinweise</span></h2>
-<ul><li>Using <a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">horizontal</a> and <a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">vertical dimensions</a> instead of equal constraints can prevent <a href="../Sketcher_Workbench.html#Flipping" title="Sketcher Workbench">flipping</a>. Points constrained by these dimensions will only switch places if the sign of their value is changed. To keep the dimensions equal the constraints can be linked to each other with an expression, or to the same value in a <a href="../Std_VarSet.html" title="Std VarSet">VarSet</a> or <a href="../Spreadsheet_CreateSheet.html" title="Spreadsheet CreateSheet">spreadsheet</a>.</li></ul>
+<ul><li>Die Verwendung <a href="../de/Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX/de">horizontaler</a> und <a href="../de/Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY/de">vertikaler Ma&szlig;e</a> anstelle von Gleichwertig festlegen kann <a href="../de/Sketcher_Workbench.html#Flipping" title="Sketcher Workbench/de">Flipping</a> verhindern. Durch diese Ma&szlig;e beschr&auml;nkte Punkte tauschen nur dann ihre Pl&auml;tze, wenn das Vorzeichen ihres Wertes ge&auml;ndert wird. Um die Ma&szlig;e gleich zu halten, k&ouml;nnen die Randbedingungen mit einem Ausdruck miteinander oder mit dem gleichen Wert in einem <a href="../de/Std_VarSet.html" title="Std VarSet/de">VarSet</a> oder einer <a href="../de/Spreadsheet_CreateSheet.html" title="Spreadsheet CreateSheet/de">Kalkulationstabelle</a> verkn&uuml;pft werden.</li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -143,35 +143,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125175215
+Cached time: 20260125204208
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.090 seconds
-Real time usage: 0.156 seconds
+CPU time usage: 0.093 seconds
+Real time usage: 0.173 seconds
 Preprocessor visited node count: 283/1000000
 Post&#8208;expand include size: 23348/2097152 bytes
 Template argument size: 9250/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3457/5000000 bytes
+Unstrip post&#8208;expand size: 3461/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.053      1 -total
- 22.17%    5.998      1 Template:Sketcher_Tools_navi/de
- 18.21%    4.926      1 Template:GuiCommand/de
- 11.25%    3.043      1 Template:Userdocnavi/de
- 10.12%    2.738      2 Template:Docnav/de
-  9.13%    2.470      2 Template:Version/de
-  9.07%    2.455      2 Template:Navigation_menu_2
-  7.84%    2.121      1 Template:Code
-  7.06%    1.911      2 Template:Incode
-  5.83%    1.576      3 Template:KEY
+100.00%   29.385      1 -total
+ 22.21%    6.527      1 Template:GuiCommand/de
+ 17.11%    5.028      2 Template:Docnav/de
+ 11.65%    3.423      1 Template:Sketcher_Tools_navi/de
+  8.95%    2.630      1 Template:Button
+  8.78%    2.580      3 Template:KEY
+  7.78%    2.286      5 Template:MenuCommand
+  7.55%    2.219      1 Template:Code
+  7.29%    2.142      2 Template:Version/de
+  6.65%    1.953      1 Template:Userdocnavi/de
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:36671-0!canonical and timestamp 20260125175215 and revision id 1744090. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:36671-0!canonical and timestamp 20260125204208 and revision id 1744114. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
