--- a/wiki/de/Sketcher_Dimension.html
+++ b/wiki/de/Sketcher_Dimension.html
@@ -1,9 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Sketcher Dimension/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Sketcher+Dimension&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Sketcher_Dimension.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Sketcher Dimension (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><a href="../fr/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--high" title="Sketcher Dimension (91% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Sketcher Dimension (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--high" title="Sketcher: Dimensione (91% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--high" title="Szkicownik: Wi&#261;zania wymiar&oacute;w (91% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Szkicownik: Wi&#261;zania wymiar&oacute;w (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--high" title="&#1057;&#1082;&#1077;&#1090;&#1095;&#1077;&#1088; &#1056;&#1072;&#1079;&#1084;&#1077;&#1088; (82% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--low" title="&#12473;&#12465;&#12483;&#12481;&#12515;&#12540;&#12539;&#23544;&#27861; (9% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--med" title="&#49828;&#52992;&#52824; &#52824;&#49688; (64% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -87,9 +87,7 @@
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Hinweise">Hinweise</span></h2>
-<div class="mw-translate-fuzzy">
-<ul><li>Die Randbedingungen <span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainDistanceX.svg&amp;filetimestamp=20240101173427&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainDistanceX.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX/de">Horizontaler Abstand</a> und <span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainDistanceY.svg&amp;filetimestamp=20240101173443&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainDistanceY.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY/de">Vertikaler Abstand</a> verhalten sich anders im Vergleich zur Randbedingung <span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainDistance.svg&amp;filetimestamp=20240101173515&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainDistance.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Sketcher_ConstrainDistance.html" title="Sketcher ConstrainDistance/de">Abstand</a>. Die ersten beiden legen auch die relativen Positionen der gemessenen Punkte zueinander fest, so dass sie nicht ihre <a href="../de/Sketcher_Workbench.html#Flipping" title="Sketcher Workbench/de">Pl&auml;tze tauschen</a>. Beispielsweise bleibt bei einem horizontalen Abstand der linke Punkt immer der linke Punkt. Dies ist nicht der Fall bei (normalen) Abst&auml;nden. Wird das Werkzeug eingesetzt, um Abst&auml;nde zwischen Punkten mit identischen X- oder Y-Koordinaten festzulegen, muss seine Position vorsichtig ausgew&auml;hlt werden. Es kann &uuml;berpr&uuml;ft werden, welche Art Abstand erstellt wird, indem das letzte Element im Abschnitt <a href="../de/Sketcher_Dialog.html#Randbedingungen" title="Sketcher Dialog/de">Randbedingungen des Sketcher-Dialogs</a> beobachtet wird; dieses wird automatisch aktualisiert, w&auml;hrend der Mauszeiger bewegt wird.</li></ul>
-</div>
+<ul><li>Die Randbedingungen <span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainDistanceX.svg&amp;filetimestamp=20240101173427&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainDistanceX.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX/de">Horizontaler Abstand</a> und <span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainDistanceY.svg&amp;filetimestamp=20240101173443&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainDistanceY.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY/de">Vertikaler Abstand</a> verhalten sich anders im Vergleich zur Randbedingung <span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainDistance.svg&amp;filetimestamp=20240101173515&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainDistance.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Sketcher_ConstrainDistance.html" title="Sketcher ConstrainDistance/de">Abstand</a>. Die ersten beiden verwenden mit Vorzeichen versehene Ma&szlig;werte und legen auch die relativen Positionen der gemessenen Punkte zueinander fest. Sie werden nur dann ihre <a href="../de/Sketcher_Workbench.html#Flipping" title="Sketcher Workbench/de">Pl&auml;tze tauschen</a> , wenn sich das Vorzeichen des Ma&szlig;wertes &auml;ndert. Beispielsweise, wenn der Wert eines horizontalen Abstands unver&auml;ndert positiv bzw. negativ bleibt, wird auch der linke Punkt immer der linke Punkt bleiben. Dies ist bei der Randbedingung Abstand, die einen vorzeichenlosen Wert aufweist, nicht der Fall. Wird das Werkzeug eingesetzt, um Abst&auml;nde zwischen Punkten mit identischen X- oder Y-Koordinaten festzulegen, muss seine Position vorsichtig ausgew&auml;hlt werden. Es kann &uuml;berpr&uuml;ft werden, welche Art Abstand erstellt wird, indem das letzte Element im Abschnitt <a href="../de/Sketcher_Dialog.html#Randbedingungen" title="Sketcher Dialog/de">Randbedingungen des Sketcher-Dialogs</a> beobachtet wird; dieses wird automatisch aktualisiert, w&auml;hrend der Mauszeiger bewegt wird.</li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -134,35 +132,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125102713
+Cached time: 20260125225945
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.101 seconds
-Real time usage: 0.129 seconds
-Preprocessor visited node count: 261/1000000
+CPU time usage: 0.074 seconds
+Real time usage: 0.111 seconds
+Preprocessor visited node count: 260/1000000
 Post&#8208;expand include size: 23322/2097152 bytes
 Template argument size: 9076/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1693/5000000 bytes
+Unstrip post&#8208;expand size: 1707/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.806      1 -total
- 19.79%    4.711      1 Template:GuiCommand/de
- 18.16%    4.323      2 Template:Value
- 16.27%    3.874      2 Template:Docnav/de
- 14.25%    3.393      1 Template:Sketcher_Tools_navi/de
- 13.44%    3.199      1 Template:Userdocnavi/de
-  8.35%    1.987      4 Template:MenuCommand
-  7.50%    1.786      2 Template:Incode
-  7.10%    1.691      2 Template:Navigation_menu_2
-  6.88%    1.638      4 Template:KEY
+100.00%   19.608      1 -total
+ 21.47%    4.210      1 Template:Sketcher_Tools_navi/de
+ 19.36%    3.797      1 Template:GuiCommand/de
+ 16.09%    3.155      2 Template:Value
+ 14.25%    2.794      2 Template:Docnav/de
+ 12.62%    2.475      1 Template:Userdocnavi/de
+  6.71%    1.316      2 Template:Navigation_menu_2
+  5.67%    1.112      1 Template:Button
+  5.30%    1.040      2 Template:Incode
+  4.84%    0.949      4 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:332249-0!canonical and timestamp 20260125102713 and revision id 1743632. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:332249-0!canonical and timestamp 20260125225944 and revision id 1744116. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
