--- a/wiki/de/TechDraw_LandmarkDimension.html
+++ b/wiki/de/TechDraw_LandmarkDimension.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw LandmarkDimension/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+LandmarkDimension&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_LandmarkDimension.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw LandmarkDimension (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/TechDraw_LandmarkDimension.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw LandmarkDimension (68% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/TechDraw_LandmarkDimension.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Cote &agrave; partir des points du rep&egrave;re (95% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
@@ -89,11 +89,8 @@
 </p>
 <h2><span class="mw-headline" id="Skripten">Skripten</span></h2>
 <p>Siehe auch: <a rel="nofollow" class="external text" href="https://freecad.github.io/SourceDoc/">Autogenerierte API-Dokumentation</a> und <a href="../de/FreeCAD_Scripting_Basics.html" title="FreeCAD Scripting Basics/de">Grundlagen der Skripterstellung in FreeCAD</a>.
+</p><p>Das Werkzeug Ma&szlig;&Uuml;berOrientierungspunkte kann in <a href="../de/Macros.html" title="Macros/de">Makros</a> und &uuml;ber die <a href="../Python_Console.html" title="Python Console">Python-Konsole</a> mit den folgenden Funktionen verwendet werden:
 </p>
-<div class="mw-translate-fuzzy">
-<p>Das Werkzeug Ma&szlig;&Uuml;berOrientierungspunkte kann in <a href="../de/Macros.html" title="Macros/de">Makros</a> und von der <a href="../de/Python.html" title="Python/de">Python</a>-Konsole aus mit den folgenden Funktionen verwendet werden:
-</p>
-</div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">dim1</span> <span class="o">=</span> <span class="n">FreeCAD</span><span class="o">.</span><span class="n">ActiveDocument</span><span class="o">.</span><span class="n">addObject</span><span class="p">(</span><span class="s2">"TechDraw::LandmarkDimension"</span><span class="p">,</span> <span class="s2">"Landmark"</span><span class="p">)</span>
 <span class="n">dim1</span><span class="o">.</span><span class="n">Type</span> <span class="o">=</span> <span class="s2">"Distance"</span>
 <span class="n">dim1</span><span class="o">.</span><span class="n">References2D</span> <span class="o">=</span> <span class="p">[(</span><span class="n">TDView</span><span class="p">,</span> <span class="s2">"Vertex1"</span><span class="p">)]</span>
@@ -144,35 +141,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125234221
+Cached time: 20260125234443
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.069 seconds
-Real time usage: 0.093 seconds
-Preprocessor visited node count: 312/1000000
+Real time usage: 0.099 seconds
+Preprocessor visited node count: 311/1000000
 Post&#8208;expand include size: 25880/2097152 bytes
 Template argument size: 10997/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3313/5000000 bytes
+Unstrip post&#8208;expand size: 3317/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.186      1 -total
- 39.39%    7.952      1 Template:TechDraw_Tools_navi/de
- 25.05%    5.057      2 Template:Navigation_menu_2
- 10.33%    2.085      1 Template:Userdocnavi/de
- 10.27%    2.073      2 Template:Docnav/de
- 10.01%    2.021      1 Template:GuiCommand/de
-  8.72%    1.760      1 Template:Code
-  6.83%    1.379      1 Template:VeryImportantMessage
-  5.62%    1.134      1 Template:Button
-  5.44%    1.099      1 Template:MenuCommand
+100.00%   20.625      1 -total
+ 31.64%    6.526      1 Template:TechDraw_Tools_navi/de
+ 18.10%    3.732      2 Template:Navigation_menu_2
+ 12.48%    2.573      1 Template:GuiCommand/de
+ 11.57%    2.386      2 Template:Docnav/de
+ 10.42%    2.150      1 Template:Userdocnavi/de
+  9.20%    1.898      1 Template:Code
+  8.16%    1.682      1 Template:VeryImportantMessage
+  6.86%    1.414      1 Template:MenuCommand
+  6.29%    1.297      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:195313-0!canonical and timestamp 20260125234221 and revision id 1744124. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:195313-0!canonical and timestamp 20260125234443 and revision id 1744126. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
