--- a/wiki/pl/TechDraw_LandmarkDimension.html
+++ b/wiki/pl/TechDraw_LandmarkDimension.html
@@ -1,10 +1,10 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw LandmarkDimension/pl</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="pl" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+LandmarkDimension&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/TechDraw_LandmarkDimension.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Ma&szlig;&Uuml;berOrientierungspunkte (95% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/TechDraw_LandmarkDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Ma&szlig;&Uuml;berOrientierungspunkte (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_LandmarkDimension.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw LandmarkDimension (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/TechDraw_LandmarkDimension.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw LandmarkDimension (68% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/TechDraw_LandmarkDimension.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Cote &agrave; partir des points du rep&egrave;re (95% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_LandmarkDimension.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw: Quota da punti di riferimento (73% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="pl" dir="ltr">polski</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="pl" dir="ltr">polski</span></li>
 <li><a href="../ru/TechDraw_LandmarkDimension.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1042;&#1089;&#1090;&#1072;&#1074;&#1080;&#1090;&#1100; &#1088;&#1072;&#1079;&#1084;&#1077;&#1088; &#1079;&#1085;&#1072;&#1082;&#1072;" (32% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Freecad.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
@@ -90,11 +90,8 @@ Wymiar jest oparty na dw&oacute;ch obiektach punktowych (<a href="../pl/Draft_Po
 </p>
 <h2><span id="Tworzenie_skrypt.C3.B3w"></span><span class="mw-headline" id="Tworzenie_skrypt&oacute;w">Tworzenie skrypt&oacute;w</span></h2>
 <p>Zobacz r&oacute;wnie&#380; stron&#281;: <a rel="nofollow" class="external text" href="https://freecad.github.io/SourceDoc/">Dokumentacja API generowana automatycznie</a> oraz <a href="../pl/FreeCAD_Scripting_Basics.html" title="FreeCAD Scripting Basics/pl">Podstawy pisania skrypt&oacute;w dla FreeCAD</a>.
+</p><p>Narz&#281;dzie <b>Wstaw wymiar przestrzenny</b> mo&#380;e by&#263; u&#380;ywane w <a href="../pl/Macros.html" title="Macros/pl">makrodefinicjach</a> i z <a href="../pl/Python_Console.html" title="Python Console/pl">Konsoli Pythona</a> za pomoc&#261; nast&#281;puj&#261;cych funkcji:
 </p>
-<div class="mw-translate-fuzzy">
-<p>Narz&#281;dzie <b>Wstaw wymiar przestrzenny</b> mo&#380;e by&#263; u&#380;ywane w <a href="../pl/Macros.html" title="Macros/pl">makrodefinicjach</a> i z konsoli <a href="../pl/Python.html" title="Python/pl">Python</a> za pomoc&#261; nast&#281;puj&#261;cych funkcji:
-</p>
-</div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">dim1</span> <span class="o">=</span> <span class="n">FreeCAD</span><span class="o">.</span><span class="n">ActiveDocument</span><span class="o">.</span><span class="n">addObject</span><span class="p">(</span><span class="s2">"TechDraw::LandmarkDimension"</span><span class="p">,</span> <span class="s2">"Landmark"</span><span class="p">)</span>
 <span class="n">dim1</span><span class="o">.</span><span class="n">Type</span> <span class="o">=</span> <span class="s2">"Distance"</span>
 <span class="n">dim1</span><span class="o">.</span><span class="n">References2D</span> <span class="o">=</span> <span class="p">[(</span><span class="n">TDView</span><span class="p">,</span> <span class="s2">"Vertex1"</span><span class="p">)]</span>
@@ -147,35 +144,35 @@ Wymiar jest oparty na dw&oacute;ch obiektach punktowych (<a href="../pl/Draft_Po
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125234218
+Cached time: 20260126092654
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.073 seconds
-Real time usage: 0.094 seconds
-Preprocessor visited node count: 308/1000000
+CPU time usage: 0.074 seconds
+Real time usage: 0.115 seconds
+Preprocessor visited node count: 307/1000000
 Post&#8208;expand include size: 24342/2097152 bytes
 Template argument size: 10212/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3305/5000000 bytes
+Unstrip post&#8208;expand size: 3314/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.967      1 -total
- 31.04%    6.198      1 Template:TechDraw_Tools_navi/pl
- 18.31%    3.657      2 Template:Navigation_menu_2
- 13.15%    2.626      1 Template:Userdocnavi/pl
- 13.08%    2.611      1 Template:GuiCommand/pl
- 10.82%    2.160      2 Template:Docnav
-  8.71%    1.739      1 Template:Code
-  6.84%    1.365      1 Template:Button
-  6.64%    1.326      1 Template:VeryImportantMessage
-  5.48%    1.094      1 Template:MenuCommand
+100.00%   28.114      1 -total
+ 27.74%    7.799      1 Template:TechDraw_Tools_navi/pl
+ 17.67%    4.968      2 Template:Navigation_menu_2
+ 13.03%    3.662      1 Template:Userdocnavi/pl
+ 11.52%    3.240      1 Template:GuiCommand/pl
+ 10.55%    2.967      1 Template:VeryImportantMessage
+  9.62%    2.703      2 Template:Docnav
+  9.31%    2.616      1 Template:Code
+  7.76%    2.182      1 Template:MenuCommand
+  7.63%    2.146      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:258864-0!canonical and timestamp 20260125234217 and revision id 1744121. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:258864-0!canonical and timestamp 20260126092653 and revision id 1744130. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
