--- a/wiki/TechDraw_View.html
+++ b/wiki/TechDraw_View.html
@@ -290,15 +290,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125135130
+Cached time: 20260126094928
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.176 seconds
-Real time usage: 0.207 seconds
-Preprocessor visited node count: 4375/1000000
-Post&#8208;expand include size: 57530/2097152 bytes
-Template argument size: 14581/2097152 bytes
+CPU time usage: 0.207 seconds
+Real time usage: 0.335 seconds
+Preprocessor visited node count: 4369/1000000
+Post&#8208;expand include size: 57512/2097152 bytes
+Template argument size: 14569/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -306,19 +306,19 @@ Unstrip post&#8208;expand size: 5525/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   67.847      1 -total
- 33.33%   22.614     58 Template:Variable
- 25.25%   17.134     35 Template:PropertyData
- 18.48%   12.541     23 Template:PropertyView
-  9.08%    6.160      1 Template:TechDraw_Tools_navi
-  6.46%    4.383      2 Template:Navigation_menu_2
-  5.08%    3.448     12 Template:TitleProperty
-  5.08%    3.444     11 Template:Value
-  4.85%    3.287     66 Template:Incode
-  4.24%    2.880      1 Template:Code
+100.00%  116.520      1 -total
+ 24.62%   28.690     58 Template:Variable
+ 18.21%   21.214     35 Template:PropertyData
+ 18.19%   21.192     23 Template:PropertyView
+ 12.38%   14.427      2 Template:FALSE
+  5.85%    6.813     12 Template:TitleProperty
+  5.63%    6.556      2 Template:Docnav
+  5.39%    6.283      1 Template:TechDraw_Tools_navi
+  5.31%    6.186     11 Template:Value
+  4.44%    5.178      2 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:72777-0!canonical and timestamp 20260125135132 and revision id 1743991. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:72777-0!canonical and timestamp 20260126094926 and revision id 1744133. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
