--- a/wiki/TechDraw_View.html
+++ b/wiki/TechDraw_View.html
@@ -290,12 +290,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126094928
+Cached time: 20260126094952
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.207 seconds
-Real time usage: 0.335 seconds
+CPU time usage: 0.236 seconds
+Real time usage: 0.268 seconds
 Preprocessor visited node count: 4369/1000000
 Post&#8208;expand include size: 57512/2097152 bytes
 Template argument size: 14569/2097152 bytes
@@ -306,19 +306,19 @@ Unstrip post&#8208;expand size: 5525/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  116.520      1 -total
- 24.62%   28.690     58 Template:Variable
- 18.21%   21.214     35 Template:PropertyData
- 18.19%   21.192     23 Template:PropertyView
- 12.38%   14.427      2 Template:FALSE
-  5.85%    6.813     12 Template:TitleProperty
-  5.63%    6.556      2 Template:Docnav
-  5.39%    6.283      1 Template:TechDraw_Tools_navi
-  5.31%    6.186     11 Template:Value
-  4.44%    5.178      2 Template:Navigation_menu_2
+100.00%   78.339      1 -total
+ 31.23%   24.463     58 Template:Variable
+ 27.28%   21.371     35 Template:PropertyData
+ 14.02%   10.984     23 Template:PropertyView
+  7.93%    6.216      1 Template:TechDraw_Tools_navi
+  7.08%    5.546      2 Template:Navigation_menu_2
+  5.22%    4.090     11 Template:Value
+  4.88%    3.821     66 Template:Incode
+  4.66%    3.649     12 Template:TitleProperty
+  4.38%    3.434      1 Template:GuiCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:72777-0!canonical and timestamp 20260126094926 and revision id 1744133. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:72777-0!canonical and timestamp 20260126094952 and revision id 1744133. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
