--- a/wiki/TechDraw_Symbol.html
+++ b/wiki/TechDraw_Symbol.html
@@ -56,7 +56,7 @@
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>The <b>TechDraw Symbol</b> tool inserts a Symbol object. A Symbol is a stripped down view that contains only a single <a href="SVG.html" title="SVG">SVG</a> file complying with the svg-tiny specification (see <a href="TechDraw_Templates.html#Notes" title="TechDraw Templates">TechDraw Templates</a>). 
-</p><p>A Symbol can be anything that helps annotate a drawing and that doesn't need to be further modified, it may however contain <a href="Svg_Namespace.html#freecad:editable" title="Svg Namespace">editable texts</a>.
+</p><p>A Symbol can be anything that helps annotate a drawing and that doesn't need to be further modified, it may however contain  <a href="Svg_Namespace.html#freecad:editable" title="Svg Namespace">editable texts</a>.
 </p><p><span style="font-size:small;"><a href="Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: The <a href="TechDraw_View.html" title="TechDraw View">TechDraw View</a> tool can also create a Symbol.
 </p><p><span typeof="mw:File"><a href="index.php?title=TechDraw_SymbolSVG_sample.png&amp;filetimestamp=20181126223408&amp;.html" class="mw-file-description"><img src="File/TechDraw_SymbolSVG_sample.png" decoding="async" width="250" height="297" class="mw-file-element" data-file-width="322" data-file-height="383"></a></span>
 </p>
@@ -150,15 +150,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125131231
+Cached time: 20260126095125
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.128 seconds
-Real time usage: 0.168 seconds
-Preprocessor visited node count: 711/1000000
-Post&#8208;expand include size: 26339/2097152 bytes
-Template argument size: 9789/2097152 bytes
+CPU time usage: 0.111 seconds
+Real time usage: 0.136 seconds
+Preprocessor visited node count: 705/1000000
+Post&#8208;expand include size: 26321/2097152 bytes
+Template argument size: 9777/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -166,19 +166,19 @@ Unstrip post&#8208;expand size: 3552/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.813      1 -total
- 20.02%    5.167      1 Template:TechDraw_Tools_navi
- 15.56%    4.016      1 Template:TitleProperty
- 15.01%    3.875      5 Template:PropertyData
- 14.45%    3.730      2 Template:Navigation_menu_2
- 10.33%    2.666      5 Template:Variable
-  7.33%    1.893      1 Template:Userdocnavi
-  6.45%    1.665      1 Template:GuiCommand
-  6.21%    1.603      2 Template:Docnav
-  6.03%    1.556      1 Template:Code
+100.00%   27.624      1 -total
+ 18.34%    5.067      1 Template:TechDraw_Tools_navi
+ 15.17%    4.190      5 Template:PropertyData
+ 14.81%    4.090      2 Template:Navigation_menu_2
+ 12.22%    3.377      1 Template:Userdocnavi
+ 10.77%    2.976      5 Template:Variable
+  9.80%    2.708      1 Template:GuiCommand
+  8.51%    2.350      2 Template:Docnav
+  7.07%    1.954      1 Template:Code
+  5.85%    1.616      2 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:74960-0!canonical and timestamp 20260125131244 and revision id 1743920. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:74960-0!canonical and timestamp 20260126095132 and revision id 1744147. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
