--- a/wiki/it/Macro_BoundingBox_Tracing.html
+++ b/wiki/it/Macro_BoundingBox_Tracing.html
@@ -77,11 +77,8 @@ Traccia contenitore
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>This macro creates a red outline of the BoundingBox (6 Faces with 6 rectangles) of an object, display the dimension of the rectangle, create volume of boundBox.
-</p>
-</div>
-<p><span typeof="mw:File"><a href="../index.php?title=Macro_BoundingBox_Tracing_00.png&amp;filetimestamp=20140506164447&amp;.html" class="mw-file-description"><img src="../File/Macro_BoundingBox_Tracing_00.png" decoding="async" width="480" height="311" class="mw-file-element" data-file-width="851" data-file-height="552"></a></span>
+<p>Questa macro crea un contorno rosso del BoundingBox (6 facce con 6 rettangoli) di un oggetto, visualizza la dimensione del rettangolo e crea il volume del boundBox.
+</p><p><span typeof="mw:File"><a href="../index.php?title=Macro_BoundingBox_Tracing_00.png&amp;filetimestamp=20140506164447&amp;.html" class="mw-file-description"><img src="../File/Macro_BoundingBox_Tracing_00.png" decoding="async" width="480" height="311" class="mw-file-element" data-file-width="851" data-file-height="552"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">BoundingBox Tracing macro in action</p>
 <p><span id="Usage"></span>
@@ -97,11 +94,7 @@ Traccia contenitore
 <p>Configurazione: vedere linee 61 a 84
 </p><p><span id="Icon"></span>
 </p>
-<div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Icona">Icona</span></h2>
-<p>Scaricare il file immagine e copiarlo nel proprio repertorio macro.
-</p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Download the file image and copy in to your macro directory.
 </p>
@@ -571,13 +564,13 @@ else:
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260126094407
+Cached time: 20260126095234
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.042 seconds
-Real time usage: 0.065 seconds
-Preprocessor visited node count: 154/1000000
+CPU time usage: 0.049 seconds
+Real time usage: 0.070 seconds
+Preprocessor visited node count: 152/1000000
 Post&#8208;expand include size: 3492/2097152 bytes
 Template argument size: 26227/2097152 bytes
 Highest expansion depth: 5/100
@@ -587,14 +580,14 @@ Unstrip post&#8208;expand size: 30904/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.944      1 -total
- 33.43%    3.659      1 Template:Macro/it
- 22.96%    2.513      2 Template:Code
- 20.31%    2.223      1 Template:MacroCode
- 19.57%    2.142      2 Template:Caption
+100.00%   12.282      1 -total
+ 32.47%    3.988      1 Template:MacroCode
+ 30.78%    3.780      1 Template:Macro/it
+ 17.48%    2.147      2 Template:Code
+ 15.18%    1.864      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28637-0!canonical and timestamp 20260126094407 and revision id 1744132. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28637-0!canonical and timestamp 20260126095234 and revision id 1744151. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
